// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"  !!map\\n #123 \\n&anchor # 456 \\n []  " 1`] = `
flowSequence (1:3 ~ 4:4)
1 | ··!!map¶
  |   ^^^^^^
2 | ·#123·¶
  | ^^^^^^^
3 | &anchor·#·456·¶
  | ^^^^^^^^^^^^^^^
4 | ·[]··¶
  | ^^^
<flowSequence anchor="anchor" tag={"handle":"!!","suffix":"map"}>
  <middleComment value="123 ">
  <middleComment value=" 456 ">
</flowSequence>
`;

exports[`"  !!map\\n #123 \\n&anchor # 456 \\n []  " 2`] = `
comment (2:2 ~ 2:7)
1 | ··!!map¶
2 | ·#123·¶
  |  ^^^^^
3 | &anchor·#·456·¶
4 | ·[]··¶
<comment value="123 " />
`;

exports[`"  !!map\\n #123 \\n&anchor # 456 \\n []  " 3`] = `
comment (3:9 ~ 3:15)
1 | ··!!map¶
2 | ·#123·¶
3 | &anchor·#·456·¶
  |         ^^^^^^
4 | ·[]··¶
<comment value=" 456 " />
`;

exports[`"  [ , ]  " 1`] = `
flowSequence (1:3 ~ 1:8)
1 | ··[·,·]··¶
  |   ^^^^^
<flowSequence>
  <sequenceItem>
    <null />
  </sequenceItem>
</flowSequence>
`;

exports[`"  [ , ]  " 2`] = `
sequenceItem (1:5 ~ 1:5)
1 | ··[·,·]··¶
  |     ~
<sequenceItem>
  <null />
</sequenceItem>
`;

exports[`"  [ : ]  " 1`] = `
flowSequence (1:3 ~ 1:8)
1 | ··[·:·]··¶
  |   ^^^^^
<flowSequence>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowSequence>
`;

exports[`"  [ : ]  " 2`] = `
mappingItem (1:5 ~ 1:6)
1 | ··[·:·]··¶
  |     ^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  [ : 123 ]  " 1`] = `
flowSequence (1:3 ~ 1:12)
1 | ··[·:·123·]··¶
  |   ^^^^^^^^^
<flowSequence>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
</flowSequence>
`;

exports[`"  [ : 123 ]  " 2`] = `
mappingItem (1:5 ~ 1:10)
1 | ··[·:·123·]··¶
  |     ^^^^^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`"  [ ? : ]  " 1`] = `
flowSequence (1:3 ~ 1:10)
1 | ··[·?·:·]··¶
  |   ^^^^^^^
<flowSequence>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowSequence>
`;

exports[`"  [ ? : ]  " 2`] = `
mappingItem (1:5 ~ 1:8)
1 | ··[·?·:·]··¶
  |     ^^^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  [ ? : 123 ]  " 1`] = `
flowSequence (1:3 ~ 1:14)
1 | ··[·?·:·123·]··¶
  |   ^^^^^^^^^^^
<flowSequence>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </mappingItem>
</flowSequence>
`;

exports[`"  [ ? : 123 ]  " 2`] = `
mappingItem (1:5 ~ 1:12)
1 | ··[·?·:·123·]··¶
  |     ^^^^^^^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</mappingItem>
`;

exports[`"  [ ? ]  " 1`] = `
flowSequence (1:3 ~ 1:8)
1 | ··[·?·]··¶
  |   ^^^^^
<flowSequence>
  <mappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowSequence>
`;

exports[`"  [ ? ]  " 2`] = `
mappingItem (1:5 ~ 1:6)
1 | ··[·?·]··¶
  |     ^
<mappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  [ ? 123 : ]  " 1`] = `
flowSequence (1:3 ~ 1:14)
1 | ··[·?·123·:·]··¶
  |   ^^^^^^^^^^^
<flowSequence>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowSequence>
`;

exports[`"  [ ? 123 : ]  " 2`] = `
mappingItem (1:5 ~ 1:12)
1 | ··[·?·123·:·]··¶
  |     ^^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  [ ? 123 : 456 ]  " 1`] = `
flowSequence (1:3 ~ 1:18)
1 | ··[·?·123·:·456·]··¶
  |   ^^^^^^^^^^^^^^^
<flowSequence>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </mappingItem>
</flowSequence>
`;

exports[`"  [ ? 123 : 456 ]  " 2`] = `
mappingItem (1:5 ~ 1:16)
1 | ··[·?·123·:·456·]··¶
  |     ^^^^^^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</mappingItem>
`;

exports[`"  [ ? 123 ]  " 1`] = `
flowSequence (1:3 ~ 1:12)
1 | ··[·?·123·]··¶
  |   ^^^^^^^^^
<flowSequence>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowSequence>
`;

exports[`"  [ ? 123 ]  " 2`] = `
mappingItem (1:5 ~ 1:10)
1 | ··[·?·123·]··¶
  |     ^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  [ 123 : ]  " 1`] = `
flowSequence (1:3 ~ 1:12)
1 | ··[·123·:·]··¶
  |   ^^^^^^^^^
<flowSequence>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </mappingItem>
</flowSequence>
`;

exports[`"  [ 123 : ]  " 2`] = `
mappingItem (1:5 ~ 1:10)
1 | ··[·123·:·]··¶
  |     ^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</mappingItem>
`;

exports[`"  [ 123 : 456 ]  " 1`] = `
flowSequence (1:3 ~ 1:16)
1 | ··[·123·:·456·]··¶
  |   ^^^^^^^^^^^^^
<flowSequence>
  <mappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </mappingItem>
</flowSequence>
`;

exports[`"  [ 123 : 456 ]  " 2`] = `
mappingItem (1:5 ~ 1:14)
1 | ··[·123·:·456·]··¶
  |     ^^^^^^^^^
<mappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</mappingItem>
`;

exports[`"  [ 123 ]  " 1`] = `
flowSequence (1:3 ~ 1:10)
1 | ··[·123·]··¶
  |   ^^^^^^^
<flowSequence>
  <sequenceItem>
    <plain value="123" />
  </sequenceItem>
</flowSequence>
`;

exports[`"  [ 123 ]  " 2`] = `
sequenceItem (1:5 ~ 1:8)
1 | ··[·123·]··¶
  |     ^^^
<sequenceItem>
  <plain value="123" />
</sequenceItem>
`;

exports[`"  [ 123, ]  " 1`] = `
flowSequence (1:3 ~ 1:11)
1 | ··[·123,·]··¶
  |   ^^^^^^^^
<flowSequence>
  <sequenceItem>
    <plain value="123" />
  </sequenceItem>
</flowSequence>
`;

exports[`"  [ 123, ]  " 2`] = `
sequenceItem (1:5 ~ 1:8)
1 | ··[·123,·]··¶
  |     ^^^
<sequenceItem>
  <plain value="123" />
</sequenceItem>
`;

exports[`"  [ 123,, ]  " 1`] = `
flowSequence (1:3 ~ 1:12)
1 | ··[·123,,·]··¶
  |   ^^^^^^^^^
<flowSequence>
  <sequenceItem>
    <plain value="123" />
  </sequenceItem>
  <sequenceItem>
    <null />
  </sequenceItem>
</flowSequence>
`;

exports[`"  [ 123,, ]  " 2`] = `
sequenceItem (1:5 ~ 1:8)
1 | ··[·123,,·]··¶
  |     ^^^
<sequenceItem>
  <plain value="123" />
</sequenceItem>
`;
